--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
+        <link rel="shortcut icon" href="./image/portfolio2.png" type="image/x-icon">
         <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
-        <h1>This is heading h1 for Portfolio!</h1>
+        <!-- Header section  -->
+        <div class="header-container">
+            <div class="container-1-1">
+                <div class="a"><a href="#home"><img src="./image/portfolio1.png" alt="resume"></a></div>
+            </div>
+            <div class="container-1-2">
+                <div class="item">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="text">
+            
+        </div>
     </body>
 </html>
