--- a/index.html
+++ b/index.html
@@ -26,8 +26,24 @@
             </div>
         </div>
 
-        <div class="text">
-            
+        <!-- Home section  -->
+        <div class="home-container">
+            <div class="container-1-1">
+                <div class="item1">
+                    <h2 class="text">hello i'm</h2>
+                    <h2 class="text header-text">John Doe</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, laudantium laborum similique perspiciatis vero dignissimos optio molestiae nesciunt odio facere incidunt?</p>
+                </div>
+                <div class="item2">
+                    <button class="btn">Hire me</button>
+                </div>
+            </div>
+            <div class="container-1-2">
+                <div class="image">
+                    <img src="./image/profile-picture1.png" alt="image">
+                </div>
+            </div>
         </div>
+
     </body>
 </html>
